--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "vercel dev"
   },
   "dependencies": {
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "axios": "^1.6.0",
+    "uuid": "^9.0.1"
   },
   "engines": {
     "node": ">=18.x"
